// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detectOptions collects module usage info 1`] = `
Object {
  "imports": Map {
    "react" => Object {
      "default": Set {
        "createElement",
      },
      "exports": Set {
        "ComponentType",
      },
    },
    "n" => Object {
      "exports": Set {
        "T",
        "B",
      },
    },
    "react-dom" => Object {
      "exports": Set {
        "render",
      },
    },
  },
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions detects @flow comment 1`] = `
Object {
  "imports": Map {},
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions detects JSX 1`] = `
Object {
  "imports": Map {},
  "isFlow": false,
  "isJSX": true,
}
`;

exports[`detectOptions detects flow constructions in code 1`] = `
Object {
  "imports": Map {},
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions use file extension to detect flow 1`] = `
Object {
  "imports": Map {},
  "isFlow": true,
  "isJSX": false,
}
`;

exports[`detectOptions use file extension to detect jsx 1`] = `
Object {
  "imports": Map {},
  "isFlow": true,
  "isJSX": true,
}
`;
